<resources>
    <string name="app_name">Calculus</string>
    <string name="clear_number">C</string>
    <string name="clear_expression">CE</string>
    <string name="clear_digit">⌫</string>
    <string name="divide_symbol">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply_symbol">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus_symbol">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus_symbol">+</string>
    <string name="negative_positive_symbol">±</string>
    <string name="dot_symbol">.</string>
    <string name="_0">0</string>
    <string name="equal_symbol">=</string>
    <string name="_null">NULL</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Dark theme</string>
    <string name="use_system_day_night_theme">Use system</string>
    <string name="settings_theme">Dark theme</string>
    <string name="test_starter">Calc test starter</string>
</resources>