<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TableRow>
        <Button
            style="@style/OperationButton"
            android:text="@string/clear_number"/>
        <Button
            style="@style/OperationButton"
            android:text="@string/clear_expression" />
        <Button
            style="@style/OperationButton"
            android:text="@string/clear_digit" />
        <Button
            style="@style/OperationButton"
            android:text="@string/divide_symbol" />
    </TableRow>
    <TableRow>
        <Button style="@style/DigitButton"
            android:text="@string/_7"/>
        <Button
            style="@style/DigitButton"
            android:text="@string/_8"/>
        <Button style="@style/DigitButton"
            android:text="@string/_9"/>
        <Button
            style="@style/OperationButton"
            android:text="@string/multiply_symbol"/>
    </TableRow>
    <TableRow>
        <Button style="@style/DigitButton"
            android:text="@string/_4"/>
        <Button style="@style/DigitButton"
            android:text="@string/_5"/>
        <Button style="@style/DigitButton"
            android:text="@string/_6"/>
        <Button style="@style/OperationButton"
            android:text="@string/minus_symbol"/>
    </TableRow>
    <TableRow>
        <Button style="@style/DigitButton"
            android:text="@string/_1"/>
        <Button style="@style/DigitButton"
            android:text="@string/_2"/>
        <Button style="@style/DigitButton"
            android:text="@string/_3"/>
        <Button style="@style/OperationButton"
            android:text="@string/plus_symbol"/>
    </TableRow>
    <TableRow>
        <Button style="@style/DigitButton"
            android:text="@string/negative_positive_symbol"/>
        <Button
            style="@style/DigitButton"
            android:text="@string/dot_symbol" />
        <Button style="@style/DigitButton"
            android:text="@string/_0" />
        <Button
            style="@style/MainButton"
            android:text="@string/equal_symbol" />
    </TableRow>
</TableLayout>