<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/calcus_state"
        android:text="@string/_null"
        style="@style/CalculusDisplay"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TableRow android:layout_weight="1">
            <com.google.android.material.button.MaterialButton
                style="@style/OperationButton"
                android:text="@string/clear_number" />

            <com.google.android.material.button.MaterialButton
                style="@style/OperationButton"
                android:text="@string/clear_expression" />

            <com.google.android.material.button.MaterialButton
                style="@style/OperationButton"
                android:text="@string/clear_digit" />

            <com.google.android.material.button.MaterialButton
                style="@style/OperationButton"
                android:text="@string/divide_symbol" />
        </TableRow>
        <TableRow android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                style="@style/OperationButton"
                android:text="@string/multiply_symbol" />
        </TableRow>
        <TableRow android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                style="@style/OperationButton"
                android:text="@string/minus_symbol" />
        </TableRow>
        <TableRow android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                style="@style/OperationButton"
                android:text="@string/plus_symbol" />
        </TableRow>
        <TableRow android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/negative_positive_symbol" />

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/_0" />

            <com.google.android.material.button.MaterialButton
                style="@style/DigitButton"
                android:text="@string/dot_symbol" />


            <com.google.android.material.button.MaterialButton
                style="@style/MainButton"
                android:text="@string/equal_symbol" />
        </TableRow>
    </TableLayout>
</LinearLayout>